	- Wat.tv
	- CollageHumor
	- Vimeo (Standard + HD)
	- Disclose.tv
	- Yuvutu
	- Youporn
	- Pornhub
	- KeezMovies
	- Freecaster

- Updated completed download pop-up window 

- Fixed bug (Error: re-directions were not correctly processed on HEAD requests)
- Fixed bug (Error: infinite re-directions were not controlled)
- Fixed bug (Error: ICO and GIF formats weren't supported on static compilations)

- Changed plug-ins:
	- Mp3Tube is now YehPlay

Plug-ins SDK:
------------

- Added 1 new property to VideoDefinition class:
	- String headers

- Added 2 new methods to Http class:
	- void setMaxAutoJumps(int value)
	- String downloadWebpageHeaders(String URL, String separator = "\n")

- Added 1 new helper function:
	- Array splitString(String str, String separator, [bool splitBehavior], [bool caseSensitive])

MacOSX:
-------

- Changed Add Video dialog to MacOSX Sheet style for better MacOSX look&feel
- Changed Languages Manager dialog to MacOSX Sheet style for better MacOSX look&feel
- Changed Credits dialog to MacOSX Sheet style for better MacOSX look&feel
- Changed alternating row color to grey for better MacOSX look&feel
- Changed historic.plist and session.plist location to "/{user}/Library/Applicacion Support/xVideoServiceThief/"
- Changed image plug-ins cache dir to "/{user}/Library/Caches/xVideoServiceThief/plugins-cache"

- Fixed bug (Error: the completed pop-up text were always the same)
- Fixed bug (Error: window size wasn't correctly saved and restored)
- Fixed bug (Error: Drag&Drop window wasn't usefull)

Windows:
--------

- Fixed bug (Error: the "checking for updates" dialog was displayed as separated window on task-bar)

- Changed image plug-ins cache dir to "C:\Documents and Settings\{user}\Program files\xVideoServiceThief\plugins-cache"

Linux:
------

- Changed image plug-ins cache dir to "~/.xVideoServiceThief/plugins-cache"
- Changed Information dialog size


2.0.1a:
-------

- Added RedTube plugin

- Updated German translation